Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19572

lfs getdirstripe prints out component header when not needed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.16.1
    • None
    • 3
    • 9223372036854775807

      current output:

      $ mkdir /mnt/lustre/test 
      $ lfs getdirstripe /mnt/lustre/test
      lmv_stripe_count: 0 lmv_stripe_offset: 0 lmv_hash_type: none
      mdtidx           FID[seq:oid:ver]

      expected output:

      $ lfs getdirstripe /mnt/lustre/test
      lmv_stripe_count: 0 lmv_stripe_offset: 0 lmv_hash_type: none

      example where header is needed:

      $ lfs setdirstripe -c2 /mnt/lustre/test2
      $ lfs getdirstripe /mnt/lustre/test2
      lmv_stripe_count: 2 lmv_stripe_offset: 1 lmv_hash_type: crush
      mdtidx           FID[seq:oid:ver]
           1           [0x240000400:0x2:0x0]
           0           [0x200000401:0x2:0x0]

            bertschinger Thomas Bertschinger
            bertschinger Thomas Bertschinger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: