LU-19572 utils: fix getdirstripe format

When 45c557ece518 updated the yaml format for `lfs getdirstripe`, it
changed the non-yaml format to always print out a header for the
directory components, even when no components were printed:

    $ lfs getdirstripe /mnt/lustre/test
    lmv_stripe_count: 0 lmv_stripe_offset: 0 lmv_hash_type: none
    mdtidx           FID[seq:oid:ver]

This output is confusing and is a change in behavior. This restores
the previous output:

    $ lfs getdirstripe /mnt/lustre/test
    lmv_stripe_count: 0 lmv_stripe_offset: 0 lmv_hash_type: none

Test-Parameters: trivial mdscount=2
Fixes: 45c557ece518 ("LU-16491 utils: update getdirstripe yaml format")
Signed-off-by: Thomas Bertschinger <bertschinger@lanl.gov>
Change-Id: I9e0c633f0959885dd37bc587800c07bd12b4b0e1
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62308
Reviewed-by: Olaf Faaland <faaland1@llnl.gov>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Reviewed-by: Frederick Dilger <fdilger@whamcloud.com>